--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,6 +1,7 @@
 <h1><%= notice %></h1>
 
 <section class="main-header">
+  <p class="flash"><%= notice %><%= alert %></p>
   <img src="<%= asset_path "achieve.png" %>">
 </section>
 <section class="about">
